@@ -1,5 +1,11 @@
 # $Id$
 
+2006-04-05	Anton E. Lebedevich
+
+	* main/Containers/UnifiedContainer.class.php: 1489 propagated to trunk
+	* main/Utils/DebugUtils.class.php: added
+	* core/OSQL/InsertOrUpdateQuery.class.php: added Timestamp support in lazySet
+
 2006-04-03	Konstantin V. Arkhipov
 
 	* 0.4.0 released.
